fix: overflow x in scroll cards

--- a/src/styles/Card.module.scss
+++ b/src/styles/Card.module.scss
@@ -15,7 +15,8 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  overflow-y: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
   gap: 1.5rem;
 
   &::-webkit-scrollbar {
